// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButtons/> should render the action buttons if isEditing is set to false 1`] = `
<div>
  <span
    class="actionButtons group horizontal"
  >
    <button
      aria-disabled="false"
      class="wrapper actionButton fill secondary small left"
      type="button"
    >
      <span
        class="content"
      >
        I am in snapshots
      </span>
    </button>
    <button
      aria-disabled="false"
      class="wrapper actionButton fill secondary small right"
      type="button"
    >
      <span
        class="content"
      >
        I am in snapshots too
      </span>
    </button>
  </span>
</div>
`;

exports[`<ActionButtons/> should render the editor if isEditing is set to true  1`] = `
<ul
  class="editList"
>
  <li
    class="editRow"
  >
    <button
      aria-disabled="false"
      class="wrapper fill secondary small"
      type="button"
    >
      <span
        class="content"
      >
        I am in snapshots
      </span>
    </button>
    <span
      class="customActionEditIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
  <li
    class="editRow"
  >
    <button
      aria-disabled="false"
      class="wrapper fill secondary small"
      type="button"
    >
      <span
        class="content"
      >
        I am in snapshots too
      </span>
    </button>
    <span
      class="customActionEditIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
</ul>
`;
